--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -115,7 +115,6 @@ h5 {
     letter-spacing: 1.4px;
     text-transform: uppercase;
 }
-
 .btn:hover {
         text-decoration: underline;
         background-color: #2f55fd;
@@ -150,6 +149,8 @@ h5 {
     color: #5474FD;
 }
 
+/*Logo design*/
+
 .logo {
     font-family: 'Josefin Sans';
     font-style: normal;
@@ -167,15 +168,15 @@ h5 {
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
     h1 {
-        font-size: 30px;
-        line-height: 30px;
+        font-size: 20px;
+        line-height: 10px;
     }
     h2 {
         font-size: 15px;
         line-height: 10px;
     }
     h3 {
-        font-size: 20px;
+        font-size: 13px;
         line-height: 4px;
     }
     h5, h4 {
@@ -197,11 +198,11 @@ h5 {
         font-size: 10px;
         line-height: 0px;
     }
-    button {
+    btn {
         font-size: 12px;
     }
     .fa {
-        font-size: 28px;
+        font-size: 18px;
     }
     .fas {
         display: none;
