--- a/styles/header.scss
+++ b/styles/header.scss
@@ -10,7 +10,6 @@
     align-items: center;
     justify-content: space-between;
 }
-
 .form {
     min-height: 50px;
     width: 100%;
@@ -23,7 +22,6 @@
     min-height: 50px;
     width: 60%;
 }
-
 .btn_search {
     width: 18%;
     box-sizing: border-box;
@@ -63,6 +61,9 @@
 
 /*Adjustmenst for smaller screens*/ 
 @media screen and (min-width: 320px) and (max-width: 768px) {
+    header {
+        max-width: 320px;
+    }
     .header_content {
         width: 100%;
         justify-content: space-around;
@@ -74,11 +75,16 @@
     .form {
         position: relative;
         bottom: 20px;
+        max-width: 370px; 
     }
     .nav_bar {
         padding: 10px;
         width: 100%;
         flex-direction: column;
+        max-width: 370px;
+    }
+    .nav_header {
+        max-width: 370px; 
     }
 
 }
