--- a/styles/images.scss
+++ b/styles/images.scss
@@ -1,18 +1,9 @@
-.img1 {
+.img1, .img2, .img5, .img6, .img7 {
     width: 100%;
     height: 100%;
     position: relative;
     z-index: -1;
 }
-
-.img2 {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    z-index: -1;
-    background-size: cover;
-}
-
 .img3 {
     min-height: 220px;
     max-width: 350px;
@@ -23,4 +14,19 @@
     max-width: 350px;
     align-self: flex-end;
     margin-top: 10px;
+}
+.img8 {
+    min-height: 284px;
+    max-width: 445px;
+}
+
+/*Adjustmenst for smaller screens*/ 
+@media screen and (min-width: 320px) and (max-width: 768px) {
+    .img1, .img2, .img5, .img6, .img7 {
+        max-width: 320px;
+    }
+    .img3, .im4, .img8 {
+        max-width: 270px;
+    }
+
 }
