--- a/styles/index.scss
+++ b/styles/index.scss
@@ -22,50 +22,34 @@ main {
     align-items: center;
     flex-direction: column;
 }
-
+.first {
+    background-image: url(../images/landscape1.png);
+    background-size: cover; 
+}
 .second { 
     background-image: url(../images/landscape2.png);
     background-size: cover; 
 }
 
-.box_content {
-    height: 760px;
-    max-width: 64%;
-    position: absolute;
-    z-index: 1;
-    display: flex;
-    flex-direction: row;
+.third { 
+    background-image: url(../images/landscape5.png);
+    background-size: cover; 
 }
+.fourth { 
+    background-image: url(../images/landscape6.png);
+    background-size: cover; 
+}
+.fifth { 
+    background-image: url(../images/testimonial.png);
+    background-size: cover; 
+}
+/*First Section = Header settings*/
 
+/*Second Section*/
 .text1 {
     max-width: 45%;
     padding-right: 10px;
 }
-
-.space {
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-
-.btn_explore, .btn_book {
-    min-height: 50px;
-    min-width: 225px;
-    border: none;
-    text-align: center;
-    background: #5474FD;
-    opacity: 0.9;
-    position: relative;
-}
-
-.pictures {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    display: flex;
-    margin-left: 120px;
-}
-
 .sub_section{
     min-height: 340px;
     max-width: 100%;
@@ -81,12 +65,101 @@ main {
     align-items: center;
     width: 700px;
 }
+.box_content1 {
+    height: 760px;
+    max-width: 64%;
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    flex-direction: row;
+}
+.pictures {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    margin-left: 120px;
+}
 
-.info-box {
+/*Third and Fourth Section*/
+.box_content2 {
+    height: 360px;
+    max-width: 60%;
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    flex-direction: row;
+}
+.box_content3 {
+    height: 360px;
+    max-width: 60%;
+    position: absolute;
+    z-index: 1;
+    justify-content: flex-end;
+    display: flex;
+    flex-direction: row;
+}
+.info_box1 {
     box-sizing: border-box;
     padding: 25px;
     max-width: 50%;
     background-color: #232323;
     opacity: 0.9;
+}
+
+/*Fifth Section*/
+.box_content4 {
+    height: 400px;
+    max-width: 90%;
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.info_box2 {
+    display: flex;
+    flex-direction: row;
+    background-color:#333333;
+    justify-content: space-between;
+}
+.text2 {
+    max-width: 62%;
+    box-sizing: border-box;
+ }
+.title {
+    display: flex;
+    justify-content:center;
+    padding-bottom: 150px;
+}
+
+/*Other elements*/
+.space {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.btn_explore, .btn_book {
+    min-height: 50px;
+    min-width: 225px;
+    border: none;
+    text-align: center;
+    background: #5474FD;
+    opacity: 0.9;
+    position: relative;
+}
+/*Adjustmenst for smaller screens*/ 
+@media screen and (min-width: 320px) and (max-width: 768px) {
+    main {
+        flex-wrap: wrap;
+        flex-direction: column;
+        max-width: 320px;
+    }
+    .section, .first, .second, .third, .fourth, .fifth {
+        position: relative;
+        max-width:320px;
+    }
+    .box_content1, .box_content2, .box_content3, .box_content4, .sub_section  {
+        max-width: 320px;
+    }
 }
 
